{
    "name": "MasterInput",
    "maps": [
        {
            "name": "PlayerControlDungeon",
            "id": "842cae48-b2e0-4f9e-bb65-ceb688534142",
            "actions": [
                {
                    "name": "MoveLeftRight",
                    "type": "PassThrough",
                    "id": "6560cd02-ee1a-4a0a-a08e-713f9f800fd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2e4a3698-eaeb-4483-823e-d75d2ea6de57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConfirmAnswer",
                    "type": "Button",
                    "id": "fdfa62dc-d915-441f-9395-802b198e4cc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClearAnswer",
                    "type": "Button",
                    "id": "56a0d206-7354-449b-a0e0-be21ac0e04ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponArt",
                    "type": "Button",
                    "id": "840b67de-5234-401c-a969-f7e635d5d129",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchTarget",
                    "type": "Button",
                    "id": "f3ee1286-c88c-4c6d-b25e-73a116ae68bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "03c9dda6-437e-477f-ad11-9f9e03bd4779",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "af0f66c4-80a7-4801-a1a1-43c1b669dd39",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3cebcfa4-e1d5-480f-a0a4-fe70f95be42e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3843218c-3137-4a95-b1a2-5e050fc82252",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "799d8b6a-c3bb-439d-991d-fd58c745f912",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "370e0bfa-c30c-48d5-8793-2540c2998af0",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ec54e8a-69ad-4f44-8f3d-d9196c23c266",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2315f6ce-fcc8-4d04-9d73-25aac0153f05",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponArt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be593045-a56a-484c-b906-9c9ee5ce2511",
                    "path": "<Keyboard>/c",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ClearAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ff7ca70-97fd-4883-8018-c0046018fa53",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerControlElimination",
            "id": "66507642-8aa9-48e2-8497-6acf4985e772",
            "actions": [
                {
                    "name": "EnterAnswer",
                    "type": "Button",
                    "id": "3eb0adb7-e91d-44a1-bb64-bbd36d77c74c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ClearAnswer",
                    "type": "Button",
                    "id": "5e8fd122-b929-498a-869c-ef793734d1f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchEnemy",
                    "type": "Button",
                    "id": "6b21754b-9cb5-44e5-92b5-ea73c24c45a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e7a3b993-33a9-4d2c-8812-58e6be0ad2ea",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cc321cd-81fc-444f-ab66-618e16c98b02",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClearAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d4fea7c-25a5-4261-b3b8-2fe2af7ef664",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerControlGeneral",
            "id": "a955f81a-466e-46f2-9699-474cecb18e67",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "8041132b-c0f1-4bcf-913d-af7ed0fffcc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "NextDialog",
                    "type": "Button",
                    "id": "b4499962-99ff-4757-868a-00710ca5d9e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "93584668-50db-417f-abba-8bf081e0af2e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "120ab47e-f3a2-4132-82f3-a6c5bd9ad108",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerControlExploration",
            "id": "00064fd6-8ab7-408a-82e0-8ce50573dbb9",
            "actions": [
                {
                    "name": "MoveUpdown",
                    "type": "PassThrough",
                    "id": "89e11989-8d1d-4e8c-9614-7798db898ebc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeftRight",
                    "type": "PassThrough",
                    "id": "b05c1e2e-b740-4f9d-b0e7-f0e17ef49040",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "723245de-a180-4462-8d76-37e74fd0b1ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "694d00e6-b08c-457b-9cbd-19f065763901",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "d68a054d-e4c0-4cef-9f56-103e1f03a6c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchTarget",
                    "type": "Button",
                    "id": "5a54c76f-3dd8-4d06-be19-d7135b77b5ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClearAnswer",
                    "type": "Button",
                    "id": "b2ce91a5-2c08-4c36-81da-b1059386f0a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "1e887a0a-2755-4fd1-bb40-99c9523a188b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpdown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "96e024b9-7132-4156-9b2f-40f43f47cbcf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpdown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "3a2ba436-0c89-40b1-858f-b9c2e52880f9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpdown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "889a35cb-971d-4691-a939-2945543b7638",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b53fa372-d2d8-4e5a-930f-35fe61f32164",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4ec1e644-ced9-4e71-80ca-bb02d3726ee0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "7c722b73-0542-496b-97ea-d640e5101ecd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "05994b3c-0aa7-4fe8-906c-7e09d6d65d2d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "956c19bf-f0e2-4b4b-a869-72b9bceccf21",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9d1ef2f9-3ba2-40cc-8eff-1af72572494d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c38edc6a-e06c-4b99-97e4-cb6438def7ba",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClearAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07352144-5bee-479a-8dee-0373bb2d4c36",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClearAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6274c1b8-e216-4783-b0ac-86bc3de6a708",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af45669a-748d-4b4d-a95c-1d9b286b7575",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WindowControl",
            "id": "9d792cc8-e9d0-4577-8d5d-da69ab4a402b",
            "actions": [
                {
                    "name": "ConfirmAnswer",
                    "type": "Button",
                    "id": "29c61b4a-991d-42c9-813b-d2d22a78afde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseWindow",
                    "type": "Button",
                    "id": "17cc94ff-b7dc-4a66-a76c-a64500d9b866",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "NextInstructionPage",
                    "type": "Button",
                    "id": "205af486-76fb-4da5-993e-3fdb6410dae7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousInstructionPage",
                    "type": "Button",
                    "id": "19772f93-350b-448a-a45c-da6f92024c45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37d9bfb6-363f-4b1e-971b-6f616e8e9c8a",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f2b8066-51f7-4dee-b638-a27a091bbebd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseWindow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97d11ffd-b39b-4f60-9075-6c87debb803b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "NextInstructionPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "787c4399-dbff-4b7b-b552-fbee4063f001",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousInstructionPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard Control",
            "bindingGroup": "Keyboard Control",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}